Fix findbugs and PMD